external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_match_unit.move
module 0x42::m {

    fun x() { }

    fun test00() {
        match (x()) {
            () => ()
        }
    }

    fun test01() {
        match (x()) {
            _ => ()
        }
    }

}
